--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Citizen Watches Website Recreation</title>
+    <title>CHRONOS - Swiss Luxury Watches for Men</title>
     <link
-    href="https://fonts.googleapis.com/css2?family=Merriweather&family=Ubuntu&family=Lora&family=Playfair+Display:wght@600;700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
   </head>
-  <body oncontextmenu="return false" style="font-family:ubuntu;" >
+  <body oncontextmenu="return false" style="font-family: 'Inter', sans-serif;" >
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
